--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class= "Header">
-    <a href= "/home/fernando/Desktop/WEB/index.html">
+    <a href= "index.html">
       <h1> Geco </h1>
       <h2> Fernando Kopelman </h2>
     </a>
@@ -28,7 +28,7 @@
             <h4> Character Design </h4>
             <h4> Storyboard & Layout </h4>
           </div>
-          <img class= "Animation" src="/home/fernando/Desktop/WEB/Img/home/img 4.jpg" width="400" height="600">
+          <img class= "Animation" src="Img/home/img 4.jpg" width="400" height="600">
         </a>
       </th>
 
@@ -39,7 +39,7 @@
       <th class= "Illustration">
         <a href="/home/fernando/Desktop/WEB/Illustration.html">
           <div class= "Illustration">
-            <img class= "Illustration" src="/home/fernando/Desktop/WEB/Img/home/img4.jpg" width="400" height="600">
+            <img class= "Illustration" src="Img/home/img4.jpg" width="400" height="600">
             <h3 class="illustration"> Illustration </h3>
           </div>
         </a> 
@@ -55,7 +55,7 @@
             <h4> Theatre </h4>
             <h4> Texts </h4>
           </div>
-          <img class= "More" src="/home/fernando/Desktop/WEB/Img/home/img4.jpg" width="400" height="600">
+          <img class= "More" src="Img/home/img4.jpg" width="400" height="600">
         </a>
       </th>
 
