--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </th>
 
       <th class= "Illustration">
-        <a href="/home/fernando/Desktop/WEB/Illustration.html">
+        <a href="Illustration.html">
           <div class= "Illustration">
             <img class= "Illustration" src="Img/home/img4.jpg" width="400" height="600">
             <h3 class="illustration"> Illustration </h3>
