--- a/Illustration.html
+++ b/Illustration.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class= "Header">
-    <a href= "/home/fernando/Desktop/WEB/index.html">
+    <a href= "index.html">
       <h1> Geco </h1>
       <h2> Fernando Kopelman </h2>
     </a>
@@ -20,7 +20,7 @@
   <!--START OF HIDDEN CONTENT--> 
   <!-- Illus1 -->
   <div class="illus" id="illus1">
-    <img src="/home/fernando/Desktop/WEB/Img/home/img2.jpg" class="illustration">
+    <img src="Img/home/img2.jpg" class="illustration">
     <p>ILLUS1 Description</p>
    </div>
 
@@ -28,20 +28,20 @@
 
   <div class="content">
     <div class="Thumbnail">
-      <img src="/home/fernando/Desktop/WEB/Img/home/img2.jpg" alt="Thumbnail" width="200" height="150" class="thumb1">
+      <img src="Img/home/img2.jpg" alt="Thumbnail" width="200" height="150" class="thumb1">
       <div class="desc">This should be something I've done.</div>
     </div>
 
     <div class="Thumbnail">
-      <a target="_blank" href="/home/fernando/Desktop/WEB/Img/home/img2.jpg" class="ilus2">
-        <img src="/home/fernando/Desktop/WEB/Img/home/img.jpg" alt="Thumbnail" width="200" height="150">
+      <a target="_blank" href="Img/home/img2.jpg" class="ilus2">
+        <img src="Img/home/img.jpg" alt="Thumbnail" width="200" height="150">
       </a>
       <div class="desc">Also this.</div>
     </div>
 
     <div class="Thumbnail">
-      <a target="_blank" href="/home/fernando/Desktop/WEB/Img/home/img.jpg" class="ilus3">
-        <img src="/home/fernando/Desktop/WEB/Img/home/img3.jpg" alt="Thumbnail" width="200" height="150">
+      <a target="_blank" href="Img/home/img.jpg" class="ilus3">
+        <img src="Img/home/img3.jpg" alt="Thumbnail" width="200" height="150">
       </a>
       <div class="desc">And this.</div>
     </div>
